bc5fa525-1f32-4c53-bf17-b98dd59ff12e/d9ae9c25-4bc5-4507-83f9-edf988812194/TMS/kubernates/rest-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rest-service-50f89a6b-2a8c-451f-bddf-2d7efb75110e
  namespace: 2e49f282-85d5-4866-af7d-8133a75e6769
  labels:
    app: rest-app-50f89a6b-2a8c-451f-bddf-2d7efb75110e
spec:
  selector:
    app: rest-app-50f89a6b-2a8c-451f-bddf-2d7efb75110e
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
